--- a/index.html
+++ b/index.html
@@ -1,10 +1,5 @@
-<!DOCTYPE html>
-<html lang="en-ca">
-<head>
-  <meta charset="utf-8">
-  <title>Vartopia test site</title>
-</head>
-<body>
+---
+layout: default
+---
   <h1>Welcome</h1>
-</body>
-</html>
+
