--- a/news.html
+++ b/news.html
@@ -1,5 +1,26 @@
 ---
 layout: default
 ---
-  <h1>This is the News Page</h1>
+<h1>Videos</h1>
+
+<ul>
+{% for news in site.categories.videos %}
+	<li>
+	<a href="{{news.url}}">{{news.title}}</a>
+	<!-- <p>{{news.meta}}</p>  -->
+	</li>
+{% endfor %}
+</ul>
+<h1>News</h1>
+
+<ul>
+{% for news in site.categories.news %}
+	<li>
+	<a href="{{news.url}}">{{news.title}}</a>
+	<!-- <p>{{news.meta}}</p>  -->
+	</li>
+{% endfor %}
+</ul>
+
+
 
