The moving boxes script added

--- a/index.html
+++ b/index.html
@@ -1,5 +1,39 @@
 ---
-layout: default
+layout: home
 ---
-  <h1>Welcome</h1>
+<img src="{{site.baseurl}}/img/huge_transparent.png" alt="Vartopia is the information technology industries only Deal Registration Network." />
+        <br><br>
+<div class="grid">
+	<div class="two columns">        
+    <a class="long-green-button" href="{{site.baseurl}}/vars.html">
+        <h2>&nbsp; I am a Reseller &nbsp;</h2>
+    </a></div>
+    <div class="two columns">
+        <a class="long-green-button" href="{{site.baseurl}}/vendors.html">
+        <h2>&nbsp; I am a Vendor &nbsp;</h2>
+        </a></div>
+</div>	 <!-- end grid -->
+<br>
 
+<h1>Vartopia is the information technology industries only Deal Registration Network.<span style="color:#F90;"> Our mission is to help Manufacturers and Resellers maximize the value of their channel incentive programs.</span></h1> 
+
+{% include contact-quicklink.html %}
+<div class="divider grid">    <p>&nbsp;</p>
+    <div class="four columns"> 
+        <h1 class="number">10+</h1>
+        <span>Vendors</span><img src="{{site.baseurl}}/img/10-manfs.png"/>
+    </div>
+    <div class="v-divider four columns"> 
+        <h1 class="number">100+</h1>
+		<span>Resellers</span><img src="{{site.baseurl}}/img/100-vendors.png"/>
+    </div>
+     <div class="v-divider four columns"> 
+        <h1 class="number">175K+</h1>
+		<span>Processed Registrations</span><img src="{{site.baseurl}}/img/1000-registrations.png"/>
+    </div>   
+    <div class="v-divider four columns"> 
+        <h1 class="number">$26B+</h1>
+        <span>Worth of Opportunities</span><br /><img src="{{site.baseurl}}/img/money-tree.png"/>
+    </div>
+<p>&nbsp;</p> 
+    </div>
