--- a/news.html
+++ b/news.html
@@ -16,8 +16,9 @@ layout: default
 <ul>
 {% for news in site.categories.news %}
 	<li>
-	<a href="{{site.baseurl}}{{news.url}}">{{news.title}}</a>
-	<!-- <p>{{news.meta}}</p>  -->
+	<p>{{news.content}}</p>
+	<!--<a href="{{site.baseurl}}{{news.url}}">{{news.title}}</a>
+	   -->
 	</li>
 {% endfor %}
 </ul>
