Blog tiles added

--- a/news.html
+++ b/news.html
@@ -12,7 +12,7 @@ layout: blog
 {% for news in site.categories.news %}
 	<div class="divider row">
 	<div class="container">
-    <img src="{{site.baseurl}}/img/{{news.tile}}" />
+    <img src="{{site.baseurl}}/img/blog-tiles/{{news.tile}}" />
 	<p>{{news.content}}</p>
 	<!--<a href="{{site.baseurl}}{{news.url}}">{{news.title}}</a>
 	   -->
