--- a/news.html
+++ b/news.html
@@ -29,8 +29,8 @@ layout: blog
 <br />
 </div> <!-- end container -->
 </div> <!-- end row -->
-<div class="divider row">
-<div class="container right">
+<div class="row">
+<div class="divider container right">
 <br />
 <div class="grid">
 {% else %}
