I produced one seemengly perfect template for about us page

--- a/news.html
+++ b/news.html
@@ -30,9 +30,9 @@ layout: blog
 </div> <!-- end container -->
 </div> <!-- end row -->
 <div class="row">
-<div class="divider container right">
+<div class="divider container">
 <br />
-<div class="grid">
+<div class="grid left">
 {% else %}
 <div class="margin-right left three columns">
    <a href="{{site.baseurl}}{{news.url}}"> <img src="{{site.baseurl}}/img/blog-tiles/{{news.tile}}" /> </a>
