Partners section is added

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 ---
 layout: home
+title: Vartopia
 ---
 <img src="{{site.baseurl}}/img/huge_transparent.png" alt="Vartopia is the information technology industries only Deal Registration Network." />
         <br><br>
