--- a/_posts/about/2013-12-11-partners.html
+++ b/_posts/about/2013-12-11-partners.html
@@ -8,31 +8,31 @@ category: about
   <div class="left grid">
       <div class="boxed threesm columns"><img src="{{site.baseurl}}/img/logos/partners/bridgeview.png" /> </div>
       <div class="oneandahalf columns">
-	BridgeView Marketing Corporation is a trusted provider of public relations, marketing, web development and lead-intelligence services to the world’s leading technology, clean energy and green data center companies</div>
-
+	BridgeView Marketing offers public relations, web development, SEO and brand management for the data center/cloud, high tech,  and energy markets.  For nearly a decade the company has provided integrated services for national and global organizations. Leveraging the perfect blend of corporate and agency experience, the staff delivers measureable, high-impact services that meet clients' visibility, brand recognition, and lead-development goals. To learn more, please visit www.bridgeviewmarketing.com.</div>
+<hr>
       <div class="boxed threesm columns"><img src="{{site.baseurl}}/img/logos/partners/gorillatoolz.png" /> </div>
       <div class="oneandahalf columns">
-	"Coming"</div>
- 
+	Gorilla Toolz offers hosted software for B2B Partner Ecosystems. The company's flagship Partner Relationship Management (PRM) solution, EcoSoft 3.0™, helps organizations gain air-tight control over their indirect sales channel by bringing together partners, pipeline, workflow, ROI and community. Today companies around the world rely on EcoSoft 2.5™ portal software to deliver partner ecosystems that decrease costs, increase sales insight, and drive new revenue.</div>
+<hr>
       <div class="boxed threesm columns"><img src="{{site.baseurl}}/img/logos/partners/timetrade.png" /> </div>
       <div class="oneandahalf columns">
 	TimeTrade’s cloud-based Responsive Engagement Platform enables organizations to move customers seamlessly from online or social media browsing to a live conversation or an in-person visit with the right associate providing the opportunity to create the personalized journey that differentiates a brand. </div>
-
+<hr>
       <div class="boxed threesm columns"><img src="{{site.baseurl}}/img/logos/partners/salesforce.png" /> </div>
       <div class="oneandahalf columns">
-	Vartopia partnered with SalesForce CRM to provide our solution to its users as a part of a seemless workflow.</div>
-
+	Salesforce.com is the enterprise cloud computing leader. Our social and mobile cloud technologies—including our flagship sales and CRM applications—help companies connect with customers, partners, and employees in entirely new ways.</div>
+<hr>
       <div class="boxed threesm columns"><img src="{{site.baseurl}}/img/logos/partners/connectwise.png" /> </div>
       <div class="oneandahalf columns">
-	Vartopia partnered with ConnectWise CRM to provide our solution to its users as a part of a seemless workflow.</div>
-
+	Over the last 28 years, ConnectWise has become the premier business operating system for IT solution providers. Today more than 49,000 IT professionals rely on ConnectWise to achieve greater accountability, operational efficiency and profitability.</div>
+<hr>
       <div class="boxed threesm columns"><img src="{{site.baseurl}}/img/logos/partners/microsoft.png" /> </div>
       <div class="oneandahalf columns">
-	Vartopia partnered with Microsoft Dynamics CRM to provide our solution to Dynamics users as a part of a seemless workflow.</div>
-
+	Imagine a suite of easy-to-learn and easy-to-use business solutions tailored to your market, designed for your business size, and dedicated to growing your business through happy customers. Microsoft Dynamics offers a full range of software focused on delivering business insights that matter to both you and your customers. From customer relationship management (CRM) software to enterprise resource planning (ERP), from supply chain management to business intelligence and reporting, Microsoft Dynamics has a business solution that’s just right for you.</div>
+<hr>
       <div class="boxed threesm columns"><img src="{{site.baseurl}}/img/logos/partners/genius.png" /> </div>
       <div class="oneandahalf columns">
-	Genius.com provides B2B and B2C marketers and sales professionals worldwide with a smart and simple marketing automation solution. With Genius, SMB and enterprise companies alike are able to increase their demand generation by deploying email marketing campaigns with integrated sales lead tracking features. With our free trial offer and easy SaaS deployment, Genius can be up and running in no time.</div> 
+	Genius.com provides B2B and B2C marketers and sales professionals worldwide with a smart and simple marketing automation solution. With Genius, SMB and enterprise companies alike are able to increase their demand generation by deploying email marketing campaigns with integrated sales lead tracking features.</div> 
   </div> <!-- end grid -->
 <br> <br>
 
